[package]
name = "peach-data"
version = "0.1.0"
authors = ["James Peach <jpeach6@bloomberg.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version="3", features=["openssl", "rustls"]}
actix-cors="^0.5.4"
uuid = {version="^0.8.2", features=["v4"]}
oauth2={version="^3.0.0", features=["futures-03", "reqwest-010"]}
serde = { version = "1.0", features = ["derive"] }
env_logger = "^0.8.2"
log="^0.4.13"
reqwest={version="^0.11.0", features=["json"]}